Fix for bug 135825 (No scrollbars in P3P summary window). r=Pike, sr=heikki.